fixed Unable to read tmc uart stepper_x register IFCNT error

--- a/extruder.cfg
+++ b/extruder.cfg
@@ -28,8 +28,8 @@ max_error: 150
 ##	E0 on MCU X/Y
 [tmc2209 extruder]
 uart_pin: E0_UART
-tx_pin: E0_TX_PIN
-uart_address: 1
+# tx_pin: E0_TX_PIN
+# uart_address: 1
 microsteps: 16
 interpolate: True
 run_current: 0.4
