--- a/steppers.cfg
+++ b/steppers.cfg
@@ -13,8 +13,8 @@ homing_retract_dist: 0 # to avoid sensor triggered after retract errors
 
 [tmc2209 stepper_x]
 uart_pin: X_UART
-tx_pin: X_TX_PIN
-uart_address: 0
+# tx_pin: X_TX_PIN
+# uart_address: 0
 microsteps: 16
 run_current: 0.5
 hold_current: 0.3
@@ -39,8 +39,8 @@ homing_retract_dist: 0 # to avoid sensor triggered after retract errors
 
 [tmc2209 stepper_y]
 uart_pin: Y_UART
-tx_pin: Y_TX_PIN
-uart_address: 3
+#tx_pin: Y_TX_PIN
+#uart_address: 3
 microsteps: 16
 interpolate: True
 run_current: 0.5
@@ -62,8 +62,8 @@ position_min: -2.0
 
 [tmc2209 stepper_z]
 uart_pin: Z_UART
-tx_pin: Z_TX_PIN
-uart_address: 2
+# tx_pin: Z_TX_PIN
+# uart_address: 2
 microsteps: 16
 run_current: 0.5
 hold_current: 0.3
