--- a/extruder.cfg
+++ b/extruder.cfg
@@ -1,6 +1,6 @@
 [extruder]
 step_pin: E0_STEP_PIN
-dir_pin: !E0_DIR_PIN
+dir_pin: E0_DIR_PIN
 enable_pin: !E0_ENABLE_PIN
 ##	If you ask for 100mm of filament, but in reality it is 98mm:
 ##	step_distance = 98 / 100 * step_distance_old
@@ -12,11 +12,11 @@ sensor_type: ATC Semitec 104GT-2
 sensor_pin: TH0
 min_temp: 0
 max_temp: 270
-min_extrude_temp: 170
+min_extrude_temp: 0
 control: pid
-pid_kp: 18.973
-pid_ki: 0.771
-pid_kd: 116.683
+pid_kp: 18.313
+pid_ki: 0.860
+pid_kd: 97.516
 max_extrude_only_distance: 100.0
 
 [verify_heater extruder]
@@ -32,6 +32,6 @@ uart_pin: E0_UART
 # uart_address: 1
 microsteps: 16
 interpolate: True
-run_current: 0.4
+run_current: 0.45
 hold_current: 0.2
 stealthchop_threshold: 0
