--- a/fans.cfg
+++ b/fans.cfg
@@ -13,7 +13,7 @@ kick_start_time: 0.75
 max_power: 1.0
 
 [controller_fan controller_fan]
-pin: X_MAX_PIN
+pin: X_MIN_PIN
 max_power: 1.0
 kick_start_time: 0.200
 heater: heater_bed
