--- a/printer.cfg
+++ b/printer.cfg
@@ -2,7 +2,6 @@
 
 [include skr_1.3_pinmap.cfg]
 [include main.cfg]
-[include macros.cfg]
 [include menu.cfg]
 [include display.cfg]
 [include steppers.cfg]
@@ -11,5 +10,54 @@
 [include fans.cfg]
 [include sensors.cfg]
 
+[include macros.cfg]
+[include shortcut_macros.cfg]
+
 # [include input_shaper.cfg]
-# [include vibration_macros.cfg] 
+# [include vibration_macros.cfg]
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [stepper_z]
+#*# position_endstop = 0
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  -0.262500, -0.137500, -0.112500, -0.100000, -0.100000, -0.262500
+#*# 	  -0.237500, -0.112500, -0.112500, -0.050000, -0.037500, -0.237500
+#*# 	  -0.312500, -0.200000, -0.075000, 0.000000, -0.150000, -0.312500
+#*# 	  -0.262500, -0.112500, -0.125000, -0.125000, -0.187500, -0.362500
+#*# 	  -0.337500, -0.187500, -0.175000, -0.162500, -0.225000, -0.362500
+#*# 	  -0.437500, -0.325000, -0.287500, -0.212500, -0.375000, -0.487500
+#*# tension = 0.2
+#*# min_x = 25.0
+#*# algo = bicubic
+#*# y_count = 6
+#*# mesh_y_pps = 2
+#*# min_y = 35.0
+#*# x_count = 6
+#*# max_y = 220.0
+#*# mesh_x_pps = 2
+#*# max_x = 225.0
+#*#
+#*# [bed_mesh high_temp]
+#*# version = 1
+#*# points =
+#*# 	  -0.262500, -0.137500, -0.112500, -0.100000, -0.100000, -0.262500
+#*# 	  -0.237500, -0.112500, -0.112500, -0.050000, -0.037500, -0.237500
+#*# 	  -0.312500, -0.200000, -0.075000, 0.000000, -0.150000, -0.312500
+#*# 	  -0.262500, -0.112500, -0.125000, -0.125000, -0.187500, -0.362500
+#*# 	  -0.337500, -0.187500, -0.175000, -0.162500, -0.225000, -0.362500
+#*# 	  -0.437500, -0.325000, -0.287500, -0.212500, -0.375000, -0.487500
+#*# tension = 0.2
+#*# min_x = 25.0
+#*# algo = bicubic
+#*# y_count = 6
+#*# mesh_y_pps = 2
+#*# min_y = 35.0
+#*# x_count = 6
+#*# max_y = 220.0
+#*# mesh_x_pps = 2
+#*# max_x = 225.0
