--- a/macros.cfg
+++ b/macros.cfg
@@ -1,6 +1,53 @@
+[gcode_macro test_speed_fast]
+default_parameter_SPEED: 100            # speed
+default_parameter_ACCEL: 1000           # acceleration
+default_parameter_SC: 4.0               # square corner velocity
+default_parameter_XMIN: 10              # min x
+default_parameter_XMAX: 240             # max x
+default_parameter_YMIN: 10              # min y
+default_parameter_YMAX: 220             # max y
+default_parameter_CURRENT: 0.95          # stepper current (amps)
+gcode:
+    SAVE_GCODE_STATE NAME=test_speed_fast_state
+
+    SET_TMC_CURRENT STEPPER=stepper_x CURRENT={CURRENT} HOLDCURRENT={CURRENT}
+    SET_TMC_CURRENT STEPPER=stepper_y CURRENT={CURRENT} HOLDCURRENT={CURRENT}
+
+    G90
+    SET_VELOCITY_LIMIT VELOCITY=200 ACCEL=1000 ACCEL_TO_DECEL=1000 SQUARE_CORNER_VELOCITY=4.0
+    G28
+    GET_POSITION
+    G1 F100000
+
+    SET_VELOCITY_LIMIT VELOCITY={SPEED} ACCEL={ACCEL} ACCEL_TO_DECEL={ACCEL|float / 2} SQUARE_CORNER_VELOCITY={SC}
+    G1 X{XMIN} Y{YMIN}
+
+    {% for i in range(2) %}
+        G1 X{XMAX} Y{YMAX}
+        G1 X{XMIN} Y{YMIN}
+    {% endfor %}
+
+    G1 X{XMIN} Y{YMAX}
+
+    {% for i in range(2) %}
+        G1 X{XMIN} Y{YMAX}
+        G1 X{XMAX} Y{YMIN}
+    {% endfor %}
+
+    G1 X{XMIN} Y{YMAX}
+    G1 X{XMIN} Y{YMIN}
+    G1 X{XMAX} Y{YMAX}
+    G1 X{XMIN} Y{YMAX}
+    G1 X{XMIN} Y{YMIN}
+
+    SET_VELOCITY_LIMIT VELOCITY=200 ACCEL=1500 ACCEL_TO_DECEL=1000 SQUARE_CORNER_VELOCITY=4.0
+    G28
+    GET_POSITION
+    RESTORE_GCODE_STATE NAME=test_speed_fast_state
+
 [gcode_macro CANCEL_PRINT]
 rename_existing: BASE_CANCEL_PRINT
-default_parameter_X: 230
+default_parameter_X: 250
 default_parameter_Y: 230
 default_parameter_Z: 10
 gcode:
@@ -14,7 +61,7 @@ gcode:
 
 [gcode_macro PAUSE]
 rename_existing: BASE_PAUSE
-default_parameter_X: 230
+default_parameter_X: 250
 default_parameter_Y: 230
 default_parameter_Z: 10
 gcode:
@@ -35,3 +82,150 @@ gcode:
     G91
     RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
     BASE_RESUME
+
+[gcode_macro INITIALIZE_FILAMENT]
+gcode: 
+    {% if "z" not in printer.toolhead.homed_axes %} ; G28 Home if needed
+        G28             ; home
+    {% endif %}
+    {% if params.TYPE == 'abs' %}
+        BED_MESH_PROFILE LOAD=high_temp
+        {% if params.BRAND == 'kvp' %}
+            SET_PRESSURE_ADVANCE ADVANCE=0.056
+        {% elif params.BRAND == 'paramount' %}
+            #TODO: needs calibrating
+        {% endif %}  
+
+    {% elif params.TYPE == 'pla' %}
+        BED_MESH_PROFILE LOAD=low_temp
+        {% if params.BRAND == 'overture' %}
+            #TODO: needs calibrating
+        {% endif %}  
+
+    {% elif params.TYPE == 'plapro' %}
+        BED_MESH_PROFILE LOAD=low_temp
+        {% if params.BRAND == 'overture' %}
+            #TODO: needs calibrating
+        {% endif %}  
+
+    {% elif params.TYPE == 'petg' %}
+        BED_MESH_PROFILE LOAD=high_temp
+        {% if params.BRAND == 'overture' %}
+            SET_PRESSURE_ADVANCE ADVANCE=0.09
+            SET_GCODE_OFFSET Z_ADJUST=0.04 MOVE=1
+        {% endif %}  
+
+    {% endif %}  
+
+[gcode_macro START_PRINT]
+gcode:
+    CLEAR_PAUSE
+    G90             ; absolute positioning
+    M82             ; absolute extruder mode
+    M107            ; turn fan off
+    BED_MESH_CLEAR  ; clear any bed mesh
+
+    {% if params.BED %}
+        M140 S{params.BED}         ; set bed final temp
+        M190 S{params.BED}         ; wait for bed final temp
+    {% endif %}
+    {% if params.EXTRUDER %}
+        M104 S{params.EXTRUDER}    ; set extruder final temp
+        M109 S{params.EXTRUDER}    ; wait for extruder final temp
+    {% endif %}
+
+    {% if "z" not in printer.toolhead.homed_axes %} ; G28 Home if needed
+        G28             ; home
+    {% endif %}
+    # PRIME_LINE
+
+# prime the nozzle 
+[gcode_macro PRIME_LINE]
+gcode: 
+    M117 Priming Line
+    {% if "z" not in printer.toolhead.homed_axes %} ; G28 Home if needed
+        G28             ; home
+    {% endif %}
+    SAVE_GCODE_STATE NAME=PRIME_LINE_state
+    G90                                 ; absolute positioning
+    G92 E0                              ; reset extruder
+    G1 Z5.0 F3000                       ; move Z Axis up
+    G1 X10 Y10 Z0.24 F5000.0            ; move to start position
+    G1 X10 Y200 Z0.24 F1500.0 E15     ; draw the first line
+    G1 X10.4 Y200 Z0.24 F5000.0         ; move to side a little
+    G1 X10.4 Y10 Z0.24 F1500.0 E30        ; draw the second line
+    G92 E0                              ; reset Extruder
+    G1 Z5.0 F3000                       ; move Z Axis up
+    RESTORE_GCODE_STATE NAME=PRIME_LINE_state
+
+[gcode_macro END_PRINT]
+gcode:
+    M400            ; wait for buffer to clear
+    SAVE_GCODE_STATE NAME=END_PRINT_state
+    G91             ; relative positioning
+    G1 E-5 F300    	; retract filament
+    G90             ; absolute
+    G1 X250 Y230 Z210
+    RESTORE_GCODE_STATE NAME=END_PRINT_state
+    M107            ; turn fan off
+    M104 S0         ; turn-off hotend
+    M140 S0         ; turn-off heat bed
+    M84             ; turn off all motors
+    BED_MESH_CLEAR    
+
+# Filament change
+[gcode_macro M600]
+gcode:
+    PAUSE_MACRO
+    UNLOAD
+
+#[gcode_macro PAUSE_MACRO]
+#gcode:
+#    PAUSE
+#    RESPOND TYPE=command MSG=action:paused
+#    PARK_MACRO
+#    SET_IDLE_TIMEOUT TIMEOUT=3600
+
+#[gcode_macro RESUME_MACRO]
+#gcode:
+#    SET_IDLE_TIMEOUT TIMEOUT=600
+#    RESUME
+#    RESPOND TYPE=command MSG=action:resumed
+
+[gcode_macro PARK_MACRO]
+gcode:
+    SAVE_GCODE_STATE NAME=PARK_MACRO_state
+    G91                     ; relative positioning
+    G1 E-2 F1000            ; retract filament
+    G1 Z10                  ; lift z slightly             
+    G90                     ; absolute positioning
+    G1 X250 Y230 Z210
+    RESTORE_GCODE_STATE name=PARK_MACRO_state
+
+
+# Z_ENDSTOP_CALIBRATE wrapper
+[gcode_macro Z_ENDSTOP_CALIBRATE_MACRO]
+gcode:
+    {% if "z" not in printer.toolhead.homed_axes %} ; G28 Home if needed
+        G28             ; move to origin
+    {% endif %}
+    G1 X145 Y109 Z10 F10000 ; align with bed mesh relative index
+    Z_ENDSTOP_CALIBRATE
+
+# Bed mesh
+[gcode_macro BED_MESH]
+gcode:
+    BED_MESH_CLEAR
+    BED_MESH_PROFILE REMOVE={params.NAME}
+    {% if "z" not in printer.toolhead.homed_axes %} ; G28 Home if needed
+        G28             ; move to origin
+    {% endif %}
+    BED_MESH_CALIBRATE
+    BED_MESH_PROFILE SAVE={params.NAME}
+    SAVE_CONFIG
+
+[gcode_macro SET_CASELIGHT]
+# Control chamber LED, 0.0-1.0
+default_parameter_S=1.0
+gcode:
+    set_pin pin=caselight value={S}
