--- a/main.cfg
+++ b/main.cfg
@@ -3,8 +3,8 @@ serial: /dev/serial/by-id/usb-Klipper_lpc1768_0380000407083DAFA845665CC42000F5-i
 
 [printer]
 kinematics: corexz
-max_velocity: 200
-max_accel: 1000
+max_velocity: 500
+max_accel: 10000
 max_z_velocity: 50
 max_z_accel: 1000
 square_corner_velocity: 4.0
@@ -12,7 +12,12 @@ square_corner_velocity: 4.0
 [force_move]
 enable_force_move: True
 
+[virtual_sdcard]
+path: /home/pi/gcode_files
+
 [pause_resume]
+
+[display_status]
 
 [idle_timeout]
 timeout: 3600
@@ -21,7 +26,7 @@ gcode:
     G91
     G0 Z10 F600
     G90
-    G0 X175 Y175 F2400
+    G0 X230 Y245 F2400
   {% endif %}
   TURN_OFF_HEATERS
   
@@ -32,7 +37,7 @@ gcode:
     G90
     G0 Z5 F500
     G28 X0 Y0
-    G0 X125 Y100 F9000
+    G0 X145 Y109 F9000
     G28 Z0
     G0 Z5 F500
 
@@ -44,5 +49,5 @@ gcode:
 # value: 1.0
 # scale: 10
 
-# [respond]
-# default_type: command
+[respond]
+default_type: command
