--- a/sensors.cfg
+++ b/sensors.cfg
@@ -1,8 +1,8 @@
 [probe]
-pin: ^Z_MAX_PIN
+pin: ^Z_MIN_PIN
 x_offset: 0.0
 y_offset: 25.0
-z_offset: 1.85
+z_offset: 4.24
 speed: 40
 samples: 1
 samples_result: median
