--- a/steppers.cfg
+++ b/steppers.cfg
@@ -2,35 +2,32 @@
 step_pin: X_STEP_PIN
 dir_pin: X_DIR_PIN
 enable_pin: !X_ENABLE_PIN
-step_distance: 0.0125
-endstop_pin: tmc2209_stepper_x:virtual_endstop
+step_distance: 0.00625
+endstop_pin: X_MAX_PIN
 position_endstop: 250
 position_min: 0
 position_max: 250
 homing_speed: 70
 homing_positive_dir: true
-homing_retract_dist: 0 # to avoid sensor triggered after retract errors
+# homing_retract_dist: 0 # to avoid sensor triggered after retract errors
 
 [tmc2209 stepper_x]
 uart_pin: X_UART
 # tx_pin: X_TX_PIN
 # uart_address: 0
-microsteps: 16
-run_current: 0.5
-hold_current: 0.3
+microsteps: 32
+run_current: 0.95
+hold_current: 0.7
 interpolate: True
 stealthchop_threshold: 250
-diag_pin: X_MIN_PIN
-driver_SGTHRS: 200
 
 [stepper_y]
 step_pin: Y_STEP_PIN
 dir_pin: Y_DIR_PIN
 enable_pin: !Y_ENABLE_PIN
-step_distance: 0.0125
-#endstop_pin: tmc2209_stepper_y:virtual_endstop
-endstop_pin: ^Y_MIN_PIN
-position_endstop: 250
+step_distance: 0.00625
+endstop_pin: tmc2209_stepper_y:virtual_endstop
+position_endstop: 230
 position_min: 0
 position_max: 250
 homing_speed: 70
@@ -41,31 +38,31 @@ homing_retract_dist: 0 # to avoid sensor triggered after retract errors
 uart_pin: Y_UART
 #tx_pin: Y_TX_PIN
 #uart_address: 3
-microsteps: 16
+microsteps: 32
 interpolate: True
-run_current: 0.5
-hold_current: 0.3
+run_current: 0.95
+hold_current: 0.7
 stealthchop_threshold: 250
-##diag_pin: Y_MIN_PIN
-driver_SGTHRS: 200
+diag_pin: Y_MIN_PIN
+driver_SGTHRS: 140
 
 [stepper_z]
 step_pin: Z_STEP_PIN
 dir_pin: Z_DIR_PIN
 enable_pin: !Z_ENABLE_PIN
-step_distance: .0125
+step_distance: 0.00625
 endstop_pin: probe:z_virtual_endstop
-position_endstop: 0.0
-position_max: 250
+# position_endstop: 2.4
+position_max: 230
 homing_speed: 40
-position_min: -2.0
+position_min: -3.0
 
 [tmc2209 stepper_z]
 uart_pin: Z_UART
 # tx_pin: Z_TX_PIN
 # uart_address: 2
-microsteps: 16
-run_current: 0.5
-hold_current: 0.3
+microsteps: 32
+run_current: 0.95
+hold_current: 0.7
 interpolate: True
 stealthchop_threshold: 250
