--- a/printer.cfg
+++ b/printer.cfg
@@ -13,7 +13,7 @@
 [include macros.cfg]
 [include shortcut_macros.cfg]
 
-# [include input_shaper.cfg]
+[include input_shaper.cfg]
 # [include vibration_macros.cfg]
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
@@ -25,12 +25,12 @@
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.262500, -0.137500, -0.112500, -0.100000, -0.100000, -0.262500
-#*# 	  -0.237500, -0.112500, -0.112500, -0.050000, -0.037500, -0.237500
-#*# 	  -0.312500, -0.200000, -0.075000, 0.000000, -0.150000, -0.312500
-#*# 	  -0.262500, -0.112500, -0.125000, -0.125000, -0.187500, -0.362500
-#*# 	  -0.337500, -0.187500, -0.175000, -0.162500, -0.225000, -0.362500
-#*# 	  -0.437500, -0.325000, -0.287500, -0.212500, -0.375000, -0.487500
+#*# 	  -0.237500, -0.093750, -0.062500, -0.050000, -0.118750, -0.200000
+#*# 	  -0.225000, -0.050000, -0.018750, -0.062500, -0.087500, -0.137500
+#*# 	  -0.275000, -0.118750, 0.012500, 0.000000, -0.106250, -0.168750
+#*# 	  -0.281250, -0.087500, -0.050000, -0.100000, -0.143750, -0.187500
+#*# 	  -0.231250, -0.075000, -0.087500, -0.093750, -0.131250, -0.187500
+#*# 	  -0.243750, -0.187500, -0.143750, -0.093750, -0.193750, -0.150000
 #*# tension = 0.2
 #*# min_x = 25.0
 #*# algo = bicubic
@@ -45,12 +45,38 @@
 #*# [bed_mesh high_temp]
 #*# version = 1
 #*# points =
-#*# 	  -0.262500, -0.137500, -0.112500, -0.100000, -0.100000, -0.262500
-#*# 	  -0.237500, -0.112500, -0.112500, -0.050000, -0.037500, -0.237500
-#*# 	  -0.312500, -0.200000, -0.075000, 0.000000, -0.150000, -0.312500
-#*# 	  -0.262500, -0.112500, -0.125000, -0.125000, -0.187500, -0.362500
-#*# 	  -0.337500, -0.187500, -0.175000, -0.162500, -0.225000, -0.362500
-#*# 	  -0.437500, -0.325000, -0.287500, -0.212500, -0.375000, -0.487500
+#*# 	-0.262500, -0.137500, -0.112500, -0.100000, -0.100000, -0.262500
+#*# 	-0.237500, -0.112500, -0.112500, -0.050000, -0.037500, -0.237500
+#*# 	-0.312500, -0.200000, -0.075000, 0.000000, -0.150000, -0.312500
+#*# 	-0.262500, -0.112500, -0.125000, -0.125000, -0.187500, -0.362500
+#*# 	-0.337500, -0.187500, -0.175000, -0.162500, -0.225000, -0.362500
+#*# 	-0.437500, -0.325000, -0.287500, -0.212500, -0.375000, -0.487500
+#*# tension = 0.2
+#*# min_x = 25.0
+#*# algo = bicubic
+#*# y_count = 6
+#*# mesh_y_pps = 2
+#*# min_y = 35.0
+#*# x_count = 6
+#*# max_y = 220.0
+#*# mesh_x_pps = 2
+#*# max_x = 225.0
+#*#
+#*# [input_shaper]
+#*# shaper_type_x = 2hump_ei
+#*# shaper_freq_x = 53.4
+#*# shaper_type_y = 2hump_ei
+#*# shaper_freq_y = 62.1
+#*#
+#*# [bed_mesh low_temp]
+#*# version = 1
+#*# points =
+#*# 	  -0.237500, -0.093750, -0.062500, -0.050000, -0.118750, -0.200000
+#*# 	  -0.225000, -0.050000, -0.018750, -0.062500, -0.087500, -0.137500
+#*# 	  -0.275000, -0.118750, 0.012500, 0.000000, -0.106250, -0.168750
+#*# 	  -0.281250, -0.087500, -0.050000, -0.100000, -0.143750, -0.187500
+#*# 	  -0.231250, -0.075000, -0.087500, -0.093750, -0.131250, -0.187500
+#*# 	  -0.243750, -0.187500, -0.143750, -0.093750, -0.193750, -0.150000
 #*# tension = 0.2
 #*# min_x = 25.0
 #*# algo = bicubic
