--- a/bed.cfg
+++ b/bed.cfg
@@ -3,9 +3,9 @@ heater_pin: BED
 sensor_type: ATC Semitec 104GT-2
 sensor_pin: TB
 control = pid
-pid_kp = 60.304
-pid_ki = 0.841
-pid_kd = 1080.952
+pid_kp = 54.198
+pid_ki = 0.638
+pid_kd = 1150.354
 min_temp: 0
 max_temp: 130
 
@@ -18,9 +18,10 @@ speed: 150
 horizontal_move_z: 5
 mesh_min: 25,35.0
 mesh_max: 225.0,220
-probe_count: 6
+probe_count: 7
 algorithm: bicubic
 fade_start: 1
 fade_end: 10
 fade_target: 0
-relative_reference_index: 15
+relative_reference_index: 24
+mesh_pps: 4,4
