--- a/macros.cfg
+++ b/macros.cfg
@@ -83,6 +83,7 @@ gcode:
     RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
     BASE_RESUME
 
+
 [gcode_macro INITIALIZE_FILAMENT]
 gcode: 
     {% if "z" not in printer.toolhead.homed_axes %} ; G28 Home if needed
@@ -110,15 +111,16 @@ gcode:
 
     {% elif params.TYPE == 'petg' %}
         BED_MESH_PROFILE LOAD=high_temp
+        SET_GCODE_OFFSET Z_ADJUST=0.04 MOVE=1  ; don't squish petg as much
         {% if params.BRAND == 'overture' %}
             SET_PRESSURE_ADVANCE ADVANCE=0.09
-            SET_GCODE_OFFSET Z_ADJUST=0.04 MOVE=1
         {% endif %}  
 
     {% endif %}  
 
 [gcode_macro START_PRINT]
 gcode:
+    M117 Starting print
     CLEAR_PAUSE
     G90             ; absolute positioning
     M82             ; absolute extruder mode
@@ -138,6 +140,7 @@ gcode:
         G28             ; home
     {% endif %}
     # PRIME_LINE
+    M117 Printing
 
 # prime the nozzle 
 [gcode_macro PRIME_LINE]
@@ -160,61 +163,89 @@ gcode:
 
 [gcode_macro END_PRINT]
 gcode:
+    M117 Ending print
     M400            ; wait for buffer to clear
-    SAVE_GCODE_STATE NAME=END_PRINT_state
-    G91             ; relative positioning
-    G1 E-5 F300    	; retract filament
-    G90             ; absolute
-    G1 X250 Y230 Z210
-    RESTORE_GCODE_STATE NAME=END_PRINT_state
+    PARK
     M107            ; turn fan off
-    M104 S0         ; turn-off hotend
-    M140 S0         ; turn-off heat bed
+    TURN_OFF_HEATERS
     M84             ; turn off all motors
     BED_MESH_CLEAR    
+    M117 Complete! 
 
 # Filament change
 [gcode_macro M600]
 gcode:
+    M117 Filament change
     PAUSE_MACRO
     UNLOAD
 
-#[gcode_macro PAUSE_MACRO]
-#gcode:
-#    PAUSE
-#    RESPOND TYPE=command MSG=action:paused
-#    PARK_MACRO
-#    SET_IDLE_TIMEOUT TIMEOUT=3600
-
-#[gcode_macro RESUME_MACRO]
-#gcode:
-#    SET_IDLE_TIMEOUT TIMEOUT=600
-#    RESUME
-#    RESPOND TYPE=command MSG=action:resumed
-
-[gcode_macro PARK_MACRO]
+[gcode_macro PAUSE]
+rename_existing: BASE_PAUSE
 gcode:
+    M117 Pausing
+    SAVE_GCODE_STATE NAME=PAUSE_state
+    BASE_PAUSE
+    RESPOND TYPE=command MSG=action:paused
+    PARK_MACRO
+    SET_IDLE_TIMEOUT TIMEOUT=3600
+    M117 Paused
+
+[gcode_macro RESUME]
+rename_existing: BASE_RESUME
+default_parameter_E: 1
+gcode:
+    M117 Resuming
+    SET_IDLE_TIMEOUT TIMEOUT=600
+    G91
+    G1 E{E} F2100
+    G90
+    RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
+    BASE_RESUME
+    RESPOND TYPE=command MSG=action:resumed
+    M117 Printing
+
+[gcode_macro CANCEL_PRINT]
+rename_existing: BASE_CANCEL_PRINT
+gcode:
+    M117 Cancelling
+    TURN_OFF_HEATERS
+    M107    ; turn off fan
+    CLEAR_PAUSE
+    SDCARD_RESET_FILE
+    BASE_CANCEL_PRINT
+    PARK
+    M117 Cancelled
+
+[gcode_macro PARK]
+default_parameter_X: 250
+default_parameter_Y: 230
+default_parameter_Z: 210
+default_parameter_E: 1
+gcode:
+    M117 Parking
     SAVE_GCODE_STATE NAME=PARK_MACRO_state
-    G91                     ; relative positioning
-    G1 E-2 F1000            ; retract filament
-    G1 Z10                  ; lift z slightly             
-    G90                     ; absolute positioning
-    G1 X250 Y230 Z210
+    G91
+    G1 E-{E} F2100
+    G90
+    G1 X{X} Y{Y} Z{Z} F6000
     RESTORE_GCODE_STATE name=PARK_MACRO_state
+    M117 Parked
 
 
-# Z_ENDSTOP_CALIBRATE wrapper
-[gcode_macro Z_ENDSTOP_CALIBRATE_MACRO]
+# PROBE_CALIBRATE wrapper
+[gcode_macro PROBE_CALIBRATE]
+rename_existing: BASE_PROBE_CALIBRATE
 gcode:
     {% if "z" not in printer.toolhead.homed_axes %} ; G28 Home if needed
         G28             ; move to origin
     {% endif %}
-    G1 X145 Y109 Z10 F10000 ; align with bed mesh relative index
-    Z_ENDSTOP_CALIBRATE
+    G1 X125 Y127 Z10 F10000 ; align with bed mesh relative index
+    BASE_PROBE_CALIBRATE
 
 # Bed mesh
 [gcode_macro BED_MESH]
 gcode:
+    M117 Generating bed mesh
     BED_MESH_CLEAR
     BED_MESH_PROFILE REMOVE={params.NAME}
     {% if "z" not in printer.toolhead.homed_axes %} ; G28 Home if needed
