--- a/sensors.cfg
+++ b/sensors.cfg
@@ -2,12 +2,12 @@
 pin: ^Z_MIN_PIN
 x_offset: 0.0
 y_offset: 25.0
-z_offset: 4.24
+# z_offset: 4.24
 speed: 40
-samples: 1
+samples: 3
 samples_result: median
 sample_retract_dist: 1
-samples_tolerance: 0.006
+samples_tolerance: 0.013
 samples_tolerance_retries: 3
 activate_gcode:
   store_extruder_temp
