--- a/shortcut_macros.cfg
+++ b/shortcut_macros.cfg
@@ -21,3 +21,10 @@ gcode:
 [gcode_macro PLAPRO_OVERTURE]
 gcode: 
     INITIALIZE_FILAMENT TYPE=plapro BRAND=overture
+    
+[gcode_macro HIGH_TEMP_BED_MESH]
+gcode: 
+    BED_MESH NAME=high_temp
+[gcode_macro LOW_TEMP_BED_MESH]
+gcode: 
+    BED_MESH NAME=low_temp
