--- a/steppers.cfg
+++ b/steppers.cfg
@@ -2,6 +2,8 @@
 step_pin: X_STEP_PIN
 dir_pin: X_DIR_PIN
 enable_pin: !X_ENABLE_PIN
+# 32 microsteps: 0.00625
+# 64 microsteps: 0.003125
 step_distance: 0.00625
 endstop_pin: X_MAX_PIN
 position_endstop: 250
@@ -18,13 +20,15 @@ uart_pin: X_UART
 microsteps: 32
 run_current: 0.95
 hold_current: 0.7
-interpolate: True
-stealthchop_threshold: 250
+interpolate: False
+stealthchop_threshold: 50
 
 [stepper_y]
 step_pin: Y_STEP_PIN
 dir_pin: Y_DIR_PIN
 enable_pin: !Y_ENABLE_PIN
+# 32 microsteps: 0.00625
+# 64 microsteps: 0.003125
 step_distance: 0.00625
 endstop_pin: tmc2209_stepper_y:virtual_endstop
 position_endstop: 230
@@ -39,7 +43,7 @@ uart_pin: Y_UART
 #tx_pin: Y_TX_PIN
 #uart_address: 3
 microsteps: 32
-interpolate: True
+interpolate: False
 run_current: 0.95
 hold_current: 0.7
 stealthchop_threshold: 250
@@ -50,6 +54,8 @@ driver_SGTHRS: 140
 step_pin: Z_STEP_PIN
 dir_pin: Z_DIR_PIN
 enable_pin: !Z_ENABLE_PIN
+# 32 microsteps: 0.00625
+# 64 microsteps: 0.003125
 step_distance: 0.00625
 endstop_pin: probe:z_virtual_endstop
 # position_endstop: 2.4
@@ -64,5 +70,5 @@ uart_pin: Z_UART
 microsteps: 32
 run_current: 0.95
 hold_current: 0.7
-interpolate: True
-stealthchop_threshold: 250
+interpolate: False
+stealthchop_threshold: 50
