improved probing, and increased microstepping

--- a/macros.cfg
+++ b/macros.cfg
@@ -261,3 +261,38 @@ gcode:
 default_parameter_S=1.0
 gcode:
     set_pin pin=caselight value={S}
+
+
+[gcode_macro store_extruder_temp]
+variable_temp: 0
+gcode:
+  SET_GCODE_VARIABLE MACRO=store_extruder_temp VARIABLE=temp VALUE={printer.extruder.target}
+
+[gcode_macro restore_extruder_temp]
+gcode:
+  {% if printer["gcode_macro store_extruder_temp"].temp >0 %}
+    M104 S{printer["gcode_macro store_extruder_temp"].temp}
+  {% endif %}
+
+[gcode_macro restore_and_wait_extruder_temp]
+gcode:
+  {% if printer["gcode_macro store_extruder_temp"].temp >0 %}
+    M109 S{printer["gcode_macro store_extruder_temp"].temp}
+  {% endif %}
+
+[gcode_macro store_bed_temp]
+variable_temp: 0
+gcode:
+  SET_GCODE_VARIABLE MACRO=store_bed_temp VARIABLE=temp VALUE={printer.heater_bed.target}
+
+[gcode_macro restore_bed_temp]
+gcode:
+  {% if printer["gcode_macro store_bed_temp"].temp >0 %}
+    M140 S{printer["gcode_macro store_bed_temp"].temp}
+  {% endif %}
+
+[gcode_macro restore_and_wait_bed_temp]
+gcode:
+  {% if printer["gcode_macro store_bed_temp"].temp >0 %}
+    M190 S{printer["gcode_macro store_bed_temp"].temp}
+  {% endif %}
