--- a/sensors.cfg
+++ b/sensors.cfg
@@ -10,9 +10,11 @@ sample_retract_dist: 1
 samples_tolerance: 0.013
 samples_tolerance_retries: 3
 activate_gcode:
-  store_extruder_temp
-  M104 S0
+  store_bed_temp temp={printer.heater_bed.target}
+  store_extruder_temp temp={printer.extruder.target}
+  TURN_OFF_HEATERS
 deactivate_gcode:
+  restore_bed_temp
   restore_extruder_temp
 
 # [filament_switch_sensor filament]
@@ -21,12 +23,3 @@ deactivate_gcode:
 # pause_delay: 1 
 # switch_pin: !E0_DET
 
-
-[gcode_macro store_extruder_temp]
-gcode:
-  SET_GCODE_VARIABLE MACRO=restore_extruder_temp VARIABLE=temp VALUE={printer.extruder.target}
-
-[gcode_macro restore_extruder_temp]
-variable_temp: 0
-gcode:
-  M104 S{temp}
