--- a/steppers.cfg
+++ b/steppers.cfg
@@ -4,7 +4,7 @@ dir_pin: X_DIR_PIN
 enable_pin: !X_ENABLE_PIN
 # 32 microsteps: 0.00625
 # 64 microsteps: 0.003125
-step_distance: 0.00625
+step_distance: 0.003125
 endstop_pin: X_MAX_PIN
 position_endstop: 250
 position_min: 0
@@ -17,10 +17,10 @@ homing_positive_dir: true
 uart_pin: X_UART
 # tx_pin: X_TX_PIN
 # uart_address: 0
-microsteps: 32
+microsteps: 64
 run_current: 0.95
 hold_current: 0.7
-interpolate: False
+interpolate: True
 stealthchop_threshold: 50
 
 [stepper_y]
@@ -29,7 +29,7 @@ dir_pin: Y_DIR_PIN
 enable_pin: !Y_ENABLE_PIN
 # 32 microsteps: 0.00625
 # 64 microsteps: 0.003125
-step_distance: 0.00625
+step_distance: 0.003125
 endstop_pin: tmc2209_stepper_y:virtual_endstop
 position_endstop: 230
 position_min: 0
@@ -42,8 +42,8 @@ homing_retract_dist: 0 # to avoid sensor triggered after retract errors
 uart_pin: Y_UART
 #tx_pin: Y_TX_PIN
 #uart_address: 3
-microsteps: 32
-interpolate: False
+microsteps: 64
+interpolate: True
 run_current: 0.95
 hold_current: 0.7
 stealthchop_threshold: 250
@@ -56,7 +56,7 @@ dir_pin: Z_DIR_PIN
 enable_pin: !Z_ENABLE_PIN
 # 32 microsteps: 0.00625
 # 64 microsteps: 0.003125
-step_distance: 0.00625
+step_distance: 0.003125
 endstop_pin: probe:z_virtual_endstop
 # position_endstop: 2.4
 position_max: 230
@@ -67,8 +67,8 @@ position_min: -3.0
 uart_pin: Z_UART
 # tx_pin: Z_TX_PIN
 # uart_address: 2
-microsteps: 32
+microsteps: 64
 run_current: 0.95
 hold_current: 0.7
-interpolate: False
+interpolate: True
 stealthchop_threshold: 50
