--- a/macros.cfg
+++ b/macros.cfg
@@ -61,18 +61,21 @@ gcode:
 
 [gcode_macro PAUSE]
 rename_existing: BASE_PAUSE
-default_parameter_X: 250
-default_parameter_Y: 230
+default_parameter_X: 125
+default_parameter_Y: 10
 default_parameter_Z: 10
-gcode:
+    M117 Pausing
     SAVE_GCODE_STATE NAME=PAUSE_state
     BASE_PAUSE
+    RESPOND TYPE=command MSG=action:paused
     G91
     G1 E-1.7 F2100
     G1 Z{Z}
     G90
-    G1 X{X} Y{Y} F6000
+    G1 X{X} Y{Y} F10000
     G91
+    SET_IDLE_TIMEOUT TIMEOUT=3600
+    M117 Paused
 
 [gcode_macro RESUME]
 rename_existing: BASE_RESUME
