--- a/fans.cfg
+++ b/fans.cfg
@@ -12,7 +12,7 @@ pin: FAN0
 kick_start_time: 0.75
 max_power: 1.0
 
-[controller_fan controller_fan]
+[controller_fan electronics]
 pin: X_MIN_PIN
 max_power: 1.0
 kick_start_time: 0.200
