--- a/bed.cfg
+++ b/bed.cfg
@@ -25,3 +25,26 @@ fade_end: 10
 fade_target: 0
 relative_reference_index: 24
 mesh_pps: 4,4
+
+[screws_tilt_adjust]
+screw1: 126,111
+screw1_name: center screw
+# screw2: 16,217
+# screw2_name:  top left screw
+# screw2: 126,217
+# screw2_name: top center screw
+# screw3: 230,217
+# screw3_name:  top right screw
+screw2: 16,111
+screw2_name: center left screw
+screw3: 230,111
+screw3_name: center right screw
+screw4: 16,7
+screw4_name: bottom left screw
+screw5: 126,7
+screw5_name: bottom center screw
+screw6: 230,7
+screw6_name: bottom right screw
+horizontal_move_z: 10.
+speed: 100.
+screw_thread: CW-M3
