--- a/display.cfg
+++ b/display.cfg
@@ -16,11 +16,11 @@ contrast: 63
 menu_root: __voron_main
 menu_timeout: 30
 
-[neopixel my_neopixel]
-#    To control Neopixel RGB in mini12864 display
-pin: EXP1_6
-chain_count: 3
-initial_RED: 1.0
-initial_GREEN: 0.0
-initial_BLUE: 0.0
-color_order_GRB: False
+# TODO: fix neopixel
+# [neopixel my_neopixel]
+# #    To control Neopixel RGB in mini12864 display
+# pin: EXP1_6
+# chain_count: 3
+# initial_RED: 1.0
+# initial_GREEN: 0.0
+# initial_BLUE: 0.0
