--- a/macros.cfg
+++ b/macros.cfg
@@ -151,7 +151,7 @@ gcode:
 [gcode_macro M600]
 gcode:
     M117 Filament change
-    PAUSE_MACRO
+    PAUSE
     UNLOAD
 
 [gcode_macro PAUSE]
@@ -159,6 +159,7 @@ rename_existing: BASE_PAUSE
 default_parameter_X: 125
 default_parameter_Y: 10
 default_parameter_Z: 10
+gcode:
     M117 Pausing
     SAVE_GCODE_STATE NAME=PAUSE_state
     BASE_PAUSE
@@ -205,12 +206,12 @@ default_parameter_Z: 210
 default_parameter_E: 1
 gcode:
     M117 Parking
-    SAVE_GCODE_STATE NAME=PARK_MACRO_state
+    SAVE_GCODE_STATE NAME=PARK_state
     G91
     G1 E-{E} F2100
     G90
     G1 X{X} Y{Y} Z{Z} F6000
-    RESTORE_GCODE_STATE name=PARK_MACRO_state
+    RESTORE_GCODE_STATE name=PARK_state
     M117 Parked
 
 # PROBE_CALIBRATE wrapper
