--- a/sensors.cfg
+++ b/sensors.cfg
@@ -9,17 +9,19 @@ samples_result: median
 sample_retract_dist: 1
 samples_tolerance: 0.013
 samples_tolerance_retries: 3
-activate_gcode:
-  store_bed_temp temp={printer.heater_bed.target}
-  store_extruder_temp temp={printer.extruder.target}
-  TURN_OFF_HEATERS
-deactivate_gcode:
-  restore_bed_temp
-  restore_extruder_temp
+# activate_gcode:
+#   store_bed_temp temp={printer.heater_bed.target}
+#   store_extruder_temp temp={printer.extruder.target}
+#   TURN_OFF_HEATERS
+# deactivate_gcode:
+#   restore_bed_temp
+#   restore_extruder_temp
 
-# [filament_switch_sensor filament]
-# pause_on_runout: False
-# runout_gcode: PAUSE_MACRO
-# pause_delay: 1 
-# switch_pin: !E0_DET
+[homing_heaters]
+
+[filament_switch_sensor filament]
+pause_on_runout: False
+runout_gcode: PAUSE
+pause_delay: 1 
+switch_pin: !Y_MAX_PIN
 
