replaced skr 1.3 with skr 1.4

--- a/sensors.cfg
+++ b/sensors.cfg
@@ -1,5 +1,5 @@
 [probe]
-pin: ^Z_MIN_PIN
+pin: ^Z_STOP
 x_offset: 0.0
 y_offset: 25.0
 # z_offset: 4.24
@@ -23,5 +23,5 @@ samples_tolerance_retries: 3
 pause_on_runout: False
 runout_gcode: PAUSE
 pause_delay: 1 
-switch_pin: !Y_MAX_PIN
+switch_pin: !E0_DET
 
