--- a/steppers.cfg
+++ b/steppers.cfg
@@ -5,7 +5,7 @@ enable_pin: !X_ENABLE_PIN
 # 32 microsteps: 0.00625
 # 64 microsteps: 0.003125
 step_distance: 0.003125
-endstop_pin: X_MAX_PIN
+endstop_pin: X_STOP
 position_endstop: 250
 position_min: 0
 position_max: 250
