--- a/extruder.cfg
+++ b/extruder.cfg
@@ -1,7 +1,7 @@
 [extruder]
-step_pin: E0_STEP_PIN
-dir_pin: E0_DIR_PIN
-enable_pin: !E0_ENABLE_PIN
+step_pin: E0_STEP
+dir_pin: E0_DIR
+enable_pin: !E0_ENABLE
 ##	If you ask for 100mm of filament, but in reality it is 98mm:
 ##	step_distance = 98 / 100 * step_distance_old
 step_distance: 0.0014553  ##	Galileo Clockwork Afterburner (LDO 36mm pancake)
@@ -28,7 +28,7 @@ max_error: 150
 ##	E0 on MCU X/Y
 [tmc2209 extruder]
 uart_pin: E0_UART
-# tx_pin: E0_TX_PIN
+# tx_pin: E0_TX
 # uart_address: 1
 microsteps: 16
 interpolate: True
