--- a/steppers.cfg
+++ b/steppers.cfg
@@ -1,7 +1,7 @@
 [stepper_x]
-step_pin: X_STEP_PIN
-dir_pin: X_DIR_PIN
-enable_pin: !X_ENABLE_PIN
+step_pin: X_STEP
+dir_pin: X_DIR
+enable_pin: !X_ENABLE
 # 32 microsteps: 0.00625
 # 64 microsteps: 0.003125
 step_distance: 0.003125
@@ -15,7 +15,7 @@ homing_positive_dir: true
 
 [tmc2209 stepper_x]
 uart_pin: X_UART
-# tx_pin: X_TX_PIN
+# tx_pin: X_TX
 # uart_address: 0
 microsteps: 64
 run_current: 0.95
@@ -24,9 +24,9 @@ interpolate: True
 stealthchop_threshold: 50
 
 [stepper_y]
-step_pin: Y_STEP_PIN
-dir_pin: Y_DIR_PIN
-enable_pin: !Y_ENABLE_PIN
+step_pin: Y_STEP
+dir_pin: Y_DIR
+enable_pin: !Y_ENABLE
 # 32 microsteps: 0.00625
 # 64 microsteps: 0.003125
 step_distance: 0.003125
@@ -40,20 +40,20 @@ homing_retract_dist: 0 # to avoid sensor triggered after retract errors
 
 [tmc2209 stepper_y]
 uart_pin: Y_UART
-#tx_pin: Y_TX_PIN
+#tx_pin: Y_TX
 #uart_address: 3
 microsteps: 64
 interpolate: True
 run_current: 0.95
 hold_current: 0.7
 stealthchop_threshold: 250
-diag_pin: Y_MIN_PIN
+diag_pin: Y_STOP
 driver_SGTHRS: 140
 
 [stepper_z]
-step_pin: Z_STEP_PIN
-dir_pin: Z_DIR_PIN
-enable_pin: !Z_ENABLE_PIN
+step_pin: Z_STEP
+dir_pin: Z_DIR
+enable_pin: !Z_ENABLE
 # 32 microsteps: 0.00625
 # 64 microsteps: 0.003125
 step_distance: 0.003125
@@ -65,7 +65,7 @@ position_min: -3.0
 
 [tmc2209 stepper_z]
 uart_pin: Z_UART
-# tx_pin: Z_TX_PIN
+# tx_pin: Z_TX
 # uart_address: 2
 microsteps: 64
 run_current: 0.95
