--- a/main.cfg
+++ b/main.cfg
@@ -1,10 +1,13 @@
 [mcu]
-serial: /dev/serial/by-id/usb-Klipper_lpc1768_0380000407083DAFA845665CC42000F5-if00
+serial: /dev/serial/by-id/usb-Klipper_lpc1769_01F0FF0F68944BAF24A17D5DC62000F5-if00
+
+[mcu host]
+serial: /tmp/klipper_host_mcu
 
 [printer]
 kinematics: corexz
 max_velocity: 300
-max_accel: 7000
+max_accel: 3000 # 7000 for tuning
 max_z_velocity: 50
 max_z_accel: 1000
 square_corner_velocity: 4.0
@@ -40,14 +43,6 @@ gcode:
     G0 X145 Y109 F9000
     G28 Z0
     G0 Z5 F500
-
-# [output_pin caselight]
-# pin: z:BED
-# pwm: true
-# hardware_pwm: false
-# cycle_time: 0.001
-# value: 1.0
-# scale: 10
 
 [respond]
 default_type: command
