20200816: The gcode macro printer.gcode object has been renamed to printer.gcode_move. Several undocumented variables in printer.toolhead and printer.gcode have been removed. See docs/Command_Templates.md for a list of available template variables.

--- a/menu.cfg
+++ b/menu.cfg
@@ -82,7 +82,7 @@ name: Tune
 [menu __voron_main __tune __speed]
 type: input
 name: Speed: {'%3d' % (menu.input*100)}%
-input: {printer.gcode.speed_factor}
+input: {printer.gcode_move.speed_factor}
 input_min: 0
 input_max: 2
 input_step: 0.01
@@ -93,7 +93,7 @@ gcode:
 [menu __voron_main __tune __flow]
 type: input
 name: Flow: {'%3d' % (menu.input*100)}%
-input: {printer.gcode.extrude_factor}
+input: {printer.gcode_move.extrude_factor}
 input_min: 0
 input_max: 2
 input_step: 0.01
@@ -104,7 +104,7 @@ gcode:
 [menu __voron_main __tune __offsetz]
 type: input
 name: Offset Z:{'%05.3f' % menu.input}
-input: {printer.gcode.homing_zpos}
+input: {printer.gcode_move.homing_zpos}
 input_min: -5
 input_max: 5
 input_step: 0.005
@@ -123,21 +123,21 @@ type: command
 enable: {printer.idle_timeout.state == "Printing"}
 name: Pause printing
 gcode:
-    {printer.gcode.action_respond_info('action:pause')}
+    {printer.gcode_move.action_respond_info('action:pause')}
 
 [menu __voron_main __octoprint __resume]
 type: command
 enable: {not printer.idle_timeout.state == "Printing"}
 name: Resume printing
 gcode:
-    {printer.gcode.action_respond_info('action:resume')}
+    {printer.gcode_move.action_respond_info('action:resume')}
 
 [menu __voron_main __octoprint __abort]
 type: command
 enable: {printer.idle_timeout.state == "Printing"}
 name: Abort printing
 gcode:
-    {printer.gcode.action_respond_info('action:cancel')}
+    {printer.gcode_move.action_respond_info('action:cancel')}
 
 ### menu control ###
 [menu __voron_main __control]
@@ -222,7 +222,7 @@ name: Move 10mm
 [menu __voron_main __control __move_10mm __axis_x]
 type: input
 name: Move X:{'%05.1f' % menu.input}
-input: {printer.gcode.gcode_position.x}
+input: {printer.gcode_move.gcode_position.x}
 input_min: 0
 input_max: 250 
 input_step: 10.0
@@ -235,7 +235,7 @@ gcode:
 [menu __voron_main __control __move_10mm __axis_y]
 type: input
 name: Move Y:{'%05.1f' % menu.input}
-input: {printer.gcode.gcode_position.y}
+input: {printer.gcode_move.gcode_position.y}
 input_min: 0
 input_max: 230
 input_step: 10.0
@@ -249,7 +249,7 @@ gcode:
 type: input
 enable: {not printer.idle_timeout.state == "Printing"}
 name: Move Z:{'%05.1f' % menu.input}
-input: {printer.gcode.gcode_position.z}
+input: {printer.gcode_move.gcode_position.z}
 input_min: 0
 input_max: 230
 input_step: 10.0
@@ -282,7 +282,7 @@ name: Move 1mm
 [menu __voron_main __control __move_1mm __axis_x]
 type: input
 name: Move X:{'%05.1f' % menu.input}
-input: {printer.gcode.gcode_position.x}
+input: {printer.gcode_move.gcode_position.x}
 input_min: 0
 input_max: 200
 input_step: 1.0
@@ -295,7 +295,7 @@ gcode:
 [menu __voron_main __control __move_1mm __axis_y]
 type: input
 name: Move Y:{'%05.1f' % menu.input}
-input: {printer.gcode.gcode_position.y}
+input: {printer.gcode_move.gcode_position.y}
 input_min: 0
 input_max: 200
 input_step: 1.0
@@ -309,7 +309,7 @@ gcode:
 type: input
 enable: {not printer.idle_timeout.state == "Printing"}
 name: Move Z:{'%05.1f' % menu.input}
-input: {printer.gcode.gcode_position.z}
+input: {printer.gcode_move.gcode_position.z}
 input_min: 0
 input_max: 200
 input_step: 1.0
@@ -342,7 +342,7 @@ name: Move 0.1mm
 [menu __voron_main __control __move_01mm __axis_x]
 type: input
 name: Move X:{'%05.1f' % menu.input}
-input: {printer.gcode.gcode_position.x}
+input: {printer.gcode_move.gcode_position.x}
 input_min: 0
 input_max: 200
 input_step: 0.1
@@ -355,7 +355,7 @@ gcode:
 [menu __voron_main __control __move_01mm __axis_y]
 type: input
 name: Move Y:{'%05.1f' % menu.input}
-input: {printer.gcode.gcode_position.y}
+input: {printer.gcode_move.gcode_position.y}
 input_min: 0
 input_max: 200
 input_step: 0.1
@@ -369,7 +369,7 @@ gcode:
 type: input
 enable: {not printer.idle_timeout.state == "Printing"}
 name: Move Z:{'%05.1f' % menu.input}
-input: {printer.gcode.gcode_position.z}
+input: {printer.gcode_move.gcode_position.z}
 input_min: 0
 input_max: 200
 input_step: 0.1
@@ -622,8 +622,8 @@ name: Dump parameters
 gcode:
    {% for name1 in printer %}
       {% for name2 in printer[name1] %}
-         { printer.gcode.action_respond_info("printer['%s'].%s = %s" % (name1, name2, printer[name1][name2])) }
+         { printer.gcode_move.action_respond_info("printer['%s'].%s = %s" % (name1, name2, printer[name1][name2])) }
       {% else %}
-         { printer.gcode.action_respond_info("printer['%s'] = %s" % (name1, printer[name1])) }
+         { printer.gcode_move.action_respond_info("printer['%s'] = %s" % (name1, printer[name1])) }
       {% endfor %}
    {% endfor %}
