--- a/steppers.cfg
+++ b/steppers.cfg
@@ -2,9 +2,10 @@
 step_pin: X_STEP
 dir_pin: X_DIR
 enable_pin: !X_ENABLE
-# 32 microsteps: 0.00625
-# 64 microsteps: 0.003125
-step_distance: 0.003125
+# 32 microsteps step_distance: 0.00625
+# 64 microsteps step_distance: 0.003125
+# rotation_distance = <full_steps_per_rotation> (200) * <microsteps> (64) * <step_distance> (0.003125) (see https://github.com/Klipper3d/klipper/blob/master/docs/Rotation_Distance.md)
+rotation_distance: 40
 endstop_pin: X_STOP
 position_endstop: 250
 position_min: 0
@@ -27,9 +28,10 @@ stealthchop_threshold: 50
 step_pin: Y_STEP
 dir_pin: Y_DIR
 enable_pin: !Y_ENABLE
-# 32 microsteps: 0.00625
-# 64 microsteps: 0.003125
-step_distance: 0.003125
+# 32 microsteps step_distance: 0.00625
+# 64 microsteps step_distance: 0.003125
+# rotation_distance = <full_steps_per_rotation> (200) * <microsteps> (64) * <step_distance> (0.003125) (see https://github.com/Klipper3d/klipper/blob/master/docs/Rotation_Distance.md)
+rotation_distance: 40
 endstop_pin: tmc2209_stepper_y:virtual_endstop
 position_endstop: 230
 position_min: 0
@@ -54,9 +56,10 @@ driver_SGTHRS: 140
 step_pin: Z_STEP
 dir_pin: Z_DIR
 enable_pin: !Z_ENABLE
-# 32 microsteps: 0.00625
-# 64 microsteps: 0.003125
-step_distance: 0.003125
+# 32 microsteps step_distance: 0.00625
+# 64 microsteps step_distance: 0.003125
+# rotation_distance = <full_steps_per_rotation> (200) * <microsteps> (64) * <step_distance> (0.003125) (see https://github.com/Klipper3d/klipper/blob/master/docs/Rotation_Distance.md)
+rotation_distance: 40
 endstop_pin: probe:z_virtual_endstop
 position_max: 230
 homing_speed: 40
