20210503: The gcode_macro default_parameter_<name> config option is deprecated. Use the params pseudo-variable to access macro parameters. Other methods for accessing macro parameters will be removed in the near future. Most users can replace a default_parameter_NAME: VALUE config option with a line like the following in the start of the macro: {% set NAME = params.NAME|default(VALUE)|float %}. See the Command Templates document for examples.

--- a/macros.cfg
+++ b/macros.cfg
@@ -1,13 +1,14 @@
 [gcode_macro test_speed_fast]
-default_parameter_SPEED: 100            # speed
-default_parameter_ACCEL: 1000           # acceleration
-default_parameter_SC: 4.0               # square corner velocity
-default_parameter_XMIN: 10              # min x
-default_parameter_XMAX: 240             # max x
-default_parameter_YMIN: 10              # min y
-default_parameter_YMAX: 220             # max y
-default_parameter_CURRENT: 0.95          # stepper current (amps)
 gcode:
+    {% set SPEED = params.SPEED|default(100)|float %}   # speed
+    {% set ACCEL = params.ACCEL|default(1000)|float %}   # acceleration
+    {% set SC = params.SC|default(4.0)|float %}         # square corner velocity
+    {% set XMIN = params.XMIN|default(10)|float %}     # min x
+    {% set XMAX = params.XMAX|default(240)|float %}     # max x
+    {% set YMIN = params.YMIN|default(10)|float %}     # min y
+    {% set YMAX = params.YMAX|default(220)|float %}     # max y
+    {% set CURRENT = params.CURRENT|default(0.95)|float %}   # stepper current (amps)
+
     SAVE_GCODE_STATE NAME=test_speed_fast_state
 
     SET_TMC_CURRENT STEPPER=stepper_x CURRENT={CURRENT} HOLDCURRENT={CURRENT}
@@ -124,10 +125,10 @@ gcode:
 
 [gcode_macro CANCEL_PRINT]
 rename_existing: BASE_CANCEL_PRINT
-default_parameter_X: 250
-default_parameter_Y: 230
-default_parameter_Z: 10
 gcode:
+    {% set X = params.X|default(250)|float %} 
+    {% set Y = params.Y|default(230)|float %} 
+    {% set Z = params.Z|default(10)|float %} 
     M104 S0
     M140 S0
     M141 S0
@@ -156,10 +157,10 @@ gcode:
 
 [gcode_macro PAUSE]
 rename_existing: BASE_PAUSE
-default_parameter_X: 125
-default_parameter_Y: 10
-default_parameter_Z: 10
 gcode:
+    {% set X = params.X|default(125)|float %} 
+    {% set Y = params.Y|default(10)|float %} 
+    {% set Z = params.Z|default(10)|float %} 
     M117 Pausing
     SAVE_GCODE_STATE NAME=PAUSE_state
     BASE_PAUSE
@@ -175,8 +176,8 @@ gcode:
 
 [gcode_macro RESUME]
 rename_existing: BASE_RESUME
-default_parameter_E: 1
 gcode:
+    {% set E = params.E|default(1)|float %} 
     M117 Resuming
     SET_IDLE_TIMEOUT TIMEOUT=600
     G91
@@ -200,11 +201,11 @@ gcode:
     M117 Cancelled
 
 [gcode_macro PARK]
-default_parameter_X: 250
-default_parameter_Y: 230
-default_parameter_Z: 210
-default_parameter_E: 1
 gcode:
+    {% set X = params.X|default(250)|float %} 
+    {% set Y = params.Y|default(230)|float %} 
+    {% set Z = params.Z|default(210)|float %} 
+    {% set E = params.E|default(1)|float %} 
     M117 Parking
     SAVE_GCODE_STATE NAME=PARK_state
     G91
@@ -240,8 +241,8 @@ gcode:
 
 [gcode_macro SET_CASELIGHT]
 # Control chamber LED, 0.0-1.0
-default_parameter_S=1.0
 gcode:
+    {% set S = params.S|default(10)|float %} 
     set_pin pin=caselight value={S}
 
 
