20201222: The step_distance setting in the stepper config sections is deprecated. It is advised to update the config to use the rotation_distance setting. Support for step_distance will be removed in the near future.

--- a/extruder.cfg
+++ b/extruder.cfg
@@ -4,7 +4,9 @@ dir_pin: E0_DIR
 enable_pin: !E0_ENABLE
 ##	If you ask for 100mm of filament, but in reality it is 98mm:
 ##	step_distance = 98 / 100 * step_distance_old
-step_distance: 0.0014553  ##	Galileo Clockwork Afterburner (LDO 36mm pancake)
+## rotation_distance = <full_steps_per_rotation> (200) * <microsteps> (16) * <step_distance> (0.0014553) (see https://github.com/Klipper3d/klipper/blob/master/docs/Rotation_Distance.md)
+# step_distance: 0.0014553  ##	Galileo Clockwork Afterburner (LDO 36mm pancake)
+rotation_distance: 4.65696
 nozzle_diameter: 0.400
 filament_diameter: 1.75
 heater_pin: HE0
